adicionando dependencias para lidar com erros de proxy na imagem nativa e adicionando virtual threads com java 21